# wordle-solver

./: pyproject.toml  readme.md  solver.py
